3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Adapted the compound animations code so that it properly works with multipart
monsters.
    server/apply.c
    server/attack.c
    server/spell_util.c
Yann Chachkoff (gros) 2007-11-25

Refactor poisoning code.
    server/time.c
    server/ob_types.c
    include/sproto.h
    include/typesproto.h
    types/poisoning/poisoning.c
    types/legacy/process.c
    types/Makefile.am
Alex Schultz 2007-11-28

Added support for compound item apply animations
    server/apply.c
Yann Chachkoff (gros) 2007-11-25

Refactor peacemaker code.
    server/ob_types.c
    server/spell_effect.c
    include/sproto.h
    include/typesproto.h
    types/peacemaker/peacemaker.c
    types/legacy/process.c
    types/Makefile.am
Alex Schultz 2007-11-25

Refactor gate code.
    server/time.c
    server/ob_types.c
    include/sproto.h
    include/typesproto.h
    types/gate/gate.c
    types/legacy/process.c
    types/Makefile.am
Alex Schultz 2007-11-23

Refactor savebed, poison, cf_handle, treasure, and weapon_improver code.
Generalize 'killer' message for poison objects.
    server/ob_types.c
    server/apply.c
    server/attack.d
    include/sproto.h
    include/typesproto.h
    types/legacy/apply.c
    types/Makefile.am
    types/savebed/savebed.c
    types/poison/poison.c
    types/cf_handle/cf_handle.c
    types/treasure/treasure.c
    types/weapon_improver/weapon_improver.c
Alex Schultz 2007-11-21

Added support for compound spellcasting animations
    server/spell_util.c
    common/object.c
Yann Chachkoff (gros) 2007-11-18

Added support for compound attack animations (displaying a custom animation
sequence when attacking with a weapon)